--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,32 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import '~antd/dist/antd.css';
+@import 'css/tag.css';
+@import 'css/comment.css';
+@import 'css/feed.css';
+@import 'css/breadcrumb.css';
+@import 'css/level.css';
+@import 'css/nav.css';
+@import 'css/column.css';
+@import 'css/photo.css';
+@import 'css/animate.css';
+@import 'css/help.css';
+@import 'css/box.css';
+
+
+.container {
+    width: 1000px;
+    margin: 0 auto;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+.form-logo {
+    margin-top: 50px;
+    border-radius: 100px;
+    width: 200px;
+    height: 200px;
+}
+
+.form {
+    margin: 0 auto;
+    width: 370px;
+    height: 370px;
+    padding: 40px;
 }
