--- a/src/css/flex.css
+++ b/src/css/flex.css
@@ -9,10 +9,11 @@
 }
 
 .column {
-    display: block;
+    /*display: block;*/
     flex-basis: 0;
     flex-grow: 1;
     flex-shrink: 1;
+    height: 100px;
 }
 
 .flex .auto {
@@ -25,52 +26,52 @@
     flex: 0 0 auto;
 }
 
-.column.is-1 {
+.columns .column.is-1 {
     flex: none;
     width: 10%;
 }
 
-.column.is-2 {
+.columns .column.is-2 {
     flex: none;
     width: 20%;
 }
 
-.column.is-3 {
+.columns .column.is-3 {
     flex: none;
     width: 30%;
 }
 
-.column.is-4 {
+.columns .column.is-4 {
     flex: none;
     width: 40%;
 }
 
-.column.is-5 {
+.columns .column.is-5 {
     flex: none;
     width: 50%;
 }
 
-.column.is-6 {
+.columns .column.is-6 {
     flex: none;
     width: 60%;
 }
 
-.column.is-7 {
+.columns .column.is-7 {
     flex: none;
     width: 70%;
 }
 
-.column.is-8 {
+.columns .column.is-8 {
     flex: none;
     width: 80%;
 }
 
-.column.is-9 {
+.columns .column.is-9 {
     flex: none;
     width: 70%;
 }
 
-.column.is-10 {
+.columns .column.is-10 {
     flex: none;
     width: 100%;
 }
@@ -110,6 +111,7 @@
     justify-content: flex-start;
 }
 
+.column.is-justify-center,
 .flex.is-justify-center {
     justify-content: center;
 }
