--- a/src/css/help.css
+++ b/src/css/help.css
@@ -2,6 +2,10 @@
     cursor: pointer;
 }
 
+.is-rounded {
+    border-radius: 290486px;
+}
+
 .is-capitalized {
     text-transform: capitalize !important;
 }
@@ -74,9 +78,17 @@
     display: inline-flex !important;
 }
 
-
 .is-block {
     display: block !important;
+}
+
+
+.is-float-left {
+    float: left !important;
+}
+
+.is-float-right {
+    float: right !important;
 }
 
 .is-clearfix::after {
@@ -85,236 +97,12 @@
     display: table;
 }
 
-.is-pulled-left {
-    float: left !important;
-}
-
-.is-pulled-right {
-    float: right !important;
-}
-
-.has-text-white {
-    color: white !important;
-}
-
-a.has-text-white:hover, a.has-text-white:focus {
-    color: #e6e6e6 !important;
-}
-
-.has-background-white {
-    background-color: white !important;
-}
-
-.has-text-black {
-    color: #0a0a0a !important;
-}
-
-a.has-text-black:hover, a.has-text-black:focus {
-    color: black !important;
-}
-
-.has-background-black {
-    background-color: #0a0a0a !important;
-}
-
-.has-text-light {
-    color: whitesmoke !important;
-}
-
-a.has-text-light:hover, a.has-text-light:focus {
-    color: #dbdbdb !important;
-}
-
-.has-background-light {
-    background-color: whitesmoke !important;
-}
-
-.has-text-dark {
-    color: #363636 !important;
-}
-
-a.has-text-dark:hover, a.has-text-dark:focus {
-    color: #1c1c1c !important;
-}
-
-.has-background-dark {
-    background-color: #363636 !important;
-}
-
-.has-text-primary {
-    color: #00d1b2 !important;
-}
-
-a.has-text-primary:hover, a.has-text-primary:focus {
-    color: #009e86 !important;
-}
-
-.has-background-primary {
-    background-color: #00d1b2 !important;
-}
-
-.has-text-link {
-    color: #3273dc !important;
-}
-
-a.has-text-link:hover, a.has-text-link:focus {
-    color: #205bbc !important;
-}
-
-.has-background-link {
-    background-color: #3273dc !important;
-}
-
-.has-text-info {
-    color: #209cee !important;
-}
-
-a.has-text-info:hover, a.has-text-info:focus {
-    color: #0f81cc !important;
-}
-
-.has-background-info {
-    background-color: #209cee !important;
-}
-
-.has-text-success {
-    color: #23d160 !important;
-}
-
-a.has-text-success:hover, a.has-text-success:focus {
-    color: #1ca64c !important;
-}
-
-.has-background-success {
-    background-color: #23d160 !important;
-}
-
-.has-text-warning {
-    color: #ffdd57 !important;
-}
-
-a.has-text-warning:hover, a.has-text-warning:focus {
-    color: #ffd324 !important;
-}
-
-.has-background-warning {
-    background-color: #ffdd57 !important;
-}
-
-.has-text-danger {
-    color: #ff3860 !important;
-}
-
-a.has-text-danger:hover, a.has-text-danger:focus {
-    color: #ff0537 !important;
-}
-
-.has-background-danger {
-    background-color: #ff3860 !important;
-}
-
-.has-text-black-bis {
-    color: #121212 !important;
-}
-
-.has-background-black-bis {
-    background-color: #121212 !important;
-}
-
-.has-text-black-ter {
-    color: #242424 !important;
-}
-
-.has-background-black-ter {
-    background-color: #242424 !important;
-}
-
-.has-text-grey-darker {
-    color: #363636 !important;
-}
-
-.has-background-grey-darker {
-    background-color: #363636 !important;
-}
-
-.has-text-grey-dark {
-    color: #4a4a4a !important;
-}
-
-.has-background-grey-dark {
-    background-color: #4a4a4a !important;
-}
-
-.has-text-grey {
-    color: #7a7a7a !important;
-}
-
-.has-background-grey {
-    background-color: #7a7a7a !important;
-}
-
-.has-text-grey-light {
-    color: #b5b5b5 !important;
-}
-
-.has-background-grey-light {
-    background-color: #b5b5b5 !important;
-}
-
-.has-text-grey-lighter {
-    color: #dbdbdb !important;
-}
-
-.has-background-grey-lighter {
-    background-color: #dbdbdb !important;
-}
-
-.has-text-white-ter {
-    color: whitesmoke !important;
-}
-
-.has-background-white-ter {
-    background-color: whitesmoke !important;
-}
-
-.has-text-white-bis {
-    color: #fafafa !important;
-}
-
-.has-background-white-bis {
-    background-color: #fafafa !important;
-}
-
-.has-text-weight-light {
-    font-weight: 300 !important;
-}
-
-.has-text-weight-normal {
-    font-weight: 400 !important;
-}
-
-.has-text-weight-medium {
-    font-weight: 500 !important;
-}
-
-.has-text-weight-semibold {
-    font-weight: 600 !important;
-}
-
-.has-text-weight-bold {
-    font-weight: 700 !important;
-}
-
-.has-text-centered {
-    text-align: center !important;
-}
-
-.has-text-justified {
-    text-align: justify !important;
-}
-
 .has-text-left {
     text-align: left !important;
+}
+
+.has-text-center {
+    text-align: center !important;
 }
 
 .has-text-right {
@@ -322,15 +110,7 @@ a.has-text-danger:hover, a.has-text-danger:focus {
 }
 
 .delete {
-    -webkit-touch-callout: none;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-    -moz-appearance: none;
-    -webkit-appearance: none;
     background-color: rgba(10, 10, 10, 0.2);
-    border: none;
     border-radius: 290486px;
     cursor: pointer;
     pointer-events: auto;
@@ -338,7 +118,6 @@ a.has-text-danger:hover, a.has-text-danger:focus {
     flex-grow: 0;
     flex-shrink: 0;
     font-size: 0;
-    height: 20px;
     max-height: 20px;
     max-width: 20px;
     min-height: 20px;
@@ -347,14 +126,15 @@ a.has-text-danger:hover, a.has-text-danger:focus {
     position: relative;
     vertical-align: top;
     width: 20px;
+    height: 20px;
 }
 
 .delete::before, .delete::after {
     background-color: white;
     content: "";
     display: block;
-    left: 50%;
     position: absolute;
+    left: 50%;
     top: 50%;
     -webkit-transform: translateX(-50%) translateY(-50%) rotate(45deg);
     transform: translateX(-50%) translateY(-50%) rotate(45deg);
@@ -380,7 +160,7 @@ a.has-text-danger:hover, a.has-text-danger:focus {
     background-color: rgba(10, 10, 10, 0.4);
 }
 
-.is-small.delete {
+.is-16x16.delete {
     height: 16px;
     max-height: 16px;
     max-width: 16px;
@@ -389,7 +169,7 @@ a.has-text-danger:hover, a.has-text-danger:focus {
     width: 16px;
 }
 
-.is-medium.delete {
+.is-24x24.delete {
     height: 24px;
     max-height: 24px;
     max-width: 24px;
@@ -398,7 +178,7 @@ a.has-text-danger:hover, a.has-text-danger:focus {
     width: 24px;
 }
 
-.is-large.delete {
+.is-32x32.delete {
     height: 32px;
     max-height: 32px;
     max-width: 32px;
