--- a/src/css/tag.css
+++ b/src/css/tag.css
@@ -1,54 +1,117 @@
-
 .tags {
-    align-items: center;
     display: flex;
     flex-wrap: wrap;
-    justify-content: flex-start;
 }
 
 .tags .tag {
-    margin-bottom: 0.5rem;
+    margin-bottom: 10px;
 }
 
-.tags .tag:not(:last-child) {
-    margin-right: 0.5rem;
+.tags.is-small {
+    font-size: 0.75rem;
 }
 
-.tags:last-child {
-    margin-bottom: -0.5rem;
-}
-
-.tags:not(:last-child) {
-    margin-bottom: 1rem;
-}
-
-.tags.is-medium .tag:not(.is-normal):not(.is-large) {
-    font-size: 1rem;
-}
-
-.tags.is-large .tag:not(.is-normal):not(.is-medium) {
+.tags.is-large {
     font-size: 1.25rem;
 }
 
-.tags.is-center {
-    justify-content: center;
+.tags .tag:not(:last-child) {
+    margin-right: 10px;
 }
 
-.tags.is-center .tag {
-    margin-right: 0.25rem;
+.tag:not(body) {
+    align-items: center;
+    background-color: whitesmoke;
+    border-radius: 4px;
+    color: #4a4a4a;
+    display: inline-flex;
+    height: 2em;
+    line-height: 1;
+    padding-left: 0.75em;
+    padding-right: 0.75em;
+    white-space: nowrap;
+}
+
+.tag:not(body) img {
+    display: inline-block;
+    vertical-align: middle;
+    height: 2em !important;
+    margin: -0.5733em 0.5em -0.5733em -0.8em;
+    border-radius: 0.28571429rem 0em 0em 0.28571429rem;
+}
+
+.tag:not(body) .delete {
     margin-left: 0.25rem;
+    margin-right: -0.375rem;
 }
 
-.tags.is-right {
-    justify-content: flex-end;
+.tag:not(body).is-small {
+    font-size: 0.75rem;
 }
 
-.tags.is-right .tag:not(:first-child) {
-    margin-left: 0.5rem;
+.tag:not(body).is-large {
+    font-size: 1.25rem;
 }
 
-.tags.is-right .tag:not(:last-child) {
-    margin-right: 0;
+.tag:not(body) .icon {
+    margin-left: 2px;
+    margin-right: 2px;
+}
+
+.tag:not(body).is-delete {
+    margin-left: 1px;
+    padding: 0;
+    position: relative;
+    width: 2em;
+}
+
+.tag:not(body).is-delete::before, .tag:not(body).is-delete::after {
+    background-color: currentColor;
+    content: "";
+    display: block;
+    left: 50%;
+    position: absolute;
+    top: 50%;
+    -webkit-transform: translateX(-50%) translateY(-50%) rotate(45deg);
+    transform: translateX(-50%) translateY(-50%) rotate(45deg);
+    -webkit-transform-origin: center center;
+    transform-origin: center center;
+}
+
+.tag:not(body).is-delete::before {
+    height: 1px;
+    width: 50%;
+}
+
+.tag:not(body).is-delete::after {
+    height: 50%;
+    width: 1px;
+}
+
+.tag:not(body).is-delete:hover, .tag:not(body).is-delete:focus {
+    background-color: #e8e8e8;
+}
+
+.tag:not(body).is-delete:active {
+    background-color: #dbdbdb;
+}
+
+.tag:not(body).is-rounded {
+    border-radius: 290486px;
+}
+
+a.tag:hover {
+    text-decoration: underline;
+}
+
+.tags.has-addons-group {
+    display: flex;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+}
+
+.tags.has-addons-group .tags.has-addons:not(:last-child) {
+    margin-right: 10px;
 }
 
 .tags.has-addons .tag {
@@ -64,26 +127,6 @@
 .tags.has-addons .tag:not(:last-child) {
     border-bottom-right-radius: 0;
     border-top-right-radius: 0;
-}
-
-.tag:not(body) {
-    align-items: center;
-    background-color: whitesmoke;
-    border-radius: 4px;
-    color: #4a4a4a;
-    display: inline-flex;
-    font-size: 0.75rem;
-    height: 2em;
-    justify-content: center;
-    line-height: 1.5;
-    padding-left: 0.75em;
-    padding-right: 0.75em;
-    white-space: nowrap;
-}
-
-.tag:not(body) .delete {
-    margin-left: 0.25rem;
-    margin-right: -0.375rem;
 }
 
 .tag:not(body).is-white {
@@ -136,103 +179,27 @@
     color: #fff;
 }
 
-.tag:not(body).is-normal {
-    font-size: 0.75rem;
-}
-
-.tag:not(body).is-medium {
-    font-size: 1rem;
-}
-
-.tag:not(body).is-large {
-    font-size: 1.25rem;
-}
-
-.tag.image img {
-    display: inline-block;
-    vertical-align: middle;
-    height: 2em !important;
-    margin: -0.5733em 0.5em -0.5733em -0.8em;
-    border-radius: 0.28571429rem 0em 0em 0.28571429rem;
-}
-
-
-.tag:not(body) .icon:first-child:not(:last-child) {
-    margin-left: -0.375em;
-    margin-right: 0.1875em;
-}
-
-.tag:not(body) .icon:last-child:not(:first-child) {
-    margin-left: 0.1875em;
-    margin-right: -0.375em;
-}
-
-.tag:not(body) .icon:first-child:last-child {
-    margin-left: -0.375em;
-    margin-right: -0.375em;
-}
-
-.tag:not(body).is-delete {
-    margin-left: 1px;
-    padding: 0;
-    position: relative;
-    width: 2em;
-}
-
-.tag:not(body).is-delete::before, .tag:not(body).is-delete::after {
-    background-color: currentColor;
-    content: "";
-    display: block;
-    left: 50%;
-    position: absolute;
-    top: 50%;
-    -webkit-transform: translateX(-50%) translateY(-50%) rotate(45deg);
-    transform: translateX(-50%) translateY(-50%) rotate(45deg);
-    -webkit-transform-origin: center center;
-    transform-origin: center center;
-}
-
-.tag:not(body).is-delete::before {
-    height: 1px;
-    width: 50%;
-}
-
-.tag:not(body).is-delete::after {
-    height: 50%;
-    width: 1px;
-}
-
-
-.tag:not(body).is-delete:hover, .tag:not(body).is-delete:focus {
-    background-color: #e8e8e8;
-}
-
-.tag:not(body).is-delete:active {
-    background-color: #dbdbdb;
-}
-
-.tag:not(body).is-rounded {
-    border-radius: 290486px;
-}
-
-a.tag:hover {
-    text-decoration: underline;
-}
-
-.tags-group {
-    display: flex;
+.tags.has-addons-group.tags.is-justify-start,
+.tags.is-justify-start {
     justify-content: flex-start;
-    flex-wrap: wrap;
 }
 
-.tags-group .item {
-    margin-right: 0.75rem;
-    flex-shrink: 0;
-    margin-bottom: 0.75rem;
-
+.tags.has-addons-group.tags.is-justify-center,
+.tags.is-justify-center {
+    justify-content: center;
 }
 
-.tags-group .item:last-child {
-    margin-bottom: 0.75rem;
+.tags.has-addons-group.tags.is-justify-end,
+.tags.is-justify-end {
+    justify-content: flex-end;
 }
 
+.tags.has-addons-group.is-justify-around,
+.tags.is-justify-around {
+    justify-content: space-around;
+}
+
+.tags.has-addons-group.tags.is-justify-between,
+.tags.is-justify-between {
+    justify-content: space-between;
+}
