--- a/src/index.css
+++ b/src/index.css
@@ -1,18 +1,29 @@
 @import '~antd/dist/antd.css';
-@import 'css/comment.css';
-@import 'css/feed.css';
-@import 'css/breadcrumb.css';
-/*diy*/
-@import 'css/tag.css';
-@import 'css/photo.css';
-@import 'css/animate.css';
 @import 'css/help.css';
 @import 'css/flex.css';
+@import 'css/tag.css';
+@import 'css/color.css';
+@import 'css/image.css';
+@import 'css/animate.css';
+@import 'css/breadcrumb.css';
 
+
+body {
+    margin: 0;
+    color: rgba(0, 0, 0, 0.65);
+    font-size: 14px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'PingFang SC', 'Hiragino Sans GB', 'Microsoft YaHei', '微软雅黑', 'Helvetica Neue', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
+    font-variant: tabular-nums;
+    line-height: 1.5;
+    background-color: #fff;
+    -webkit-font-feature-settings: 'tnum';
+    font-feature-settings: 'tnum';
+}
 
 .container {
     width: 1000px;
     margin: 0 auto;
+    /*box-shadow: 0 3px 4px rgba(0, 0, 0, 0.06);*/
 }
 
 .form-logo {
@@ -29,3 +40,16 @@
     padding: 40px;
 
 }
+
+
+.margin-auto {
+
+    width: 200px;
+    height: 200px;
+    position: absolute;
+    bottom: 50px;
+    margin-left: 400px;
+}
+
+
+
